--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
     "pug": "^3.0.2"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.16"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "mocha"
   },
   "name": "project1",
   "version": "1.0.0",
